--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.5.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>bogdan.learning</groupId>
-	<artifactId>mybank</artifactId>
+	<groupId>com.mybank</groupId>
+	<artifactId>mybank-deposits-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mybank</name>
+	<name>mybank-deposits-service</name>
 	<description>Bank Application</description>
 	<properties>
 		<java.version>11</java.version>
@@ -60,8 +60,6 @@
 			<version>1.4.2.Final</version>
 		</dependency>
 
-
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -80,8 +78,5 @@
             <artifactId>spring-hateoas</artifactId>
         </dependency>
     </dependencies>
-
-
-
 
 </project>
