28/09 create account DEPOSIT : AccountDeposit, AccountDepositService.java ...

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <groupId>org.springframework.hateoas</groupId>
             <artifactId>spring-hateoas</artifactId>
         </dependency>
+
+		<dependency>
+			<groupId>com.mybank</groupId>
+			<artifactId>mybank-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
 </project>
